fix(changelog): fix hidden conversation name "Cộng đồng" and dark mode issue in "Gửi lời mời kết bạn" style(zadark.scss): add background color to .friend-profile__addfriend class

--- a/src/core/scss/zadark.scss
+++ b/src/core/scss/zadark.scss
@@ -1404,6 +1404,10 @@ html[data-zadark-theme="dark"] {
 
     // END: Image Show
 
+    .friend-profile__addfriend {
+      background-color: var(--WA100) !important;
+    }
+
     .friend-profile__addfriend__msg {
       background: transparent;
     }
